# flightpath

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  build.py  build.sh  cleaner.sh  gui-tests-checklist.md  pyproject.toml  release.sh  released versions.txt  unit-tests-plan-2.md  unit-tests-plan.md
flightpath/: __init__.py  editable.py  hidden.py  main.py  reactor.py  server.py  test.py
flightpath/actions/: csvpath_loader.py  run_one_csvpath.py
flightpath/assets/: logo-173x40.tiff  logo-173x40_sharp.xcf
flightpath/dialogs/: activation_dialog.py  add_config_key_dialog.py  ai_request_info_dialog.__  ask_question_dialog.__  ask_question_dialog.py  compile_env_dialog.py  error_dialog.py  files_template_dialog.py  find_file_by_reference_dialog copy.py  find_file_by_reference_dialog.__  find_file_by_reference_dialog.py  find_file_name_one_context_menu.py  generate_csv_dialog.__  generate_csv_dialog.py  generate_csvpath_dialog copy.py  generate_csvpath_dialog.py  generate_how_would_i_dialog copy.py  load_paths_dialog.py  new_key_dialog.py  new_run_dialog.py  paths_template_dialog.py  pick_cwd_dialog.py  pick_paths_dialog.py  run_failed_dialog.py  run_info_dialog.py  save_csv_to.py  sftp_servers_dialog.py  splash_dialog.py  stage_data_dialog.py  sync_config_dialog.py  template_dialog.py  transfers_dialog.py  webhooks_dialog copy.py  webhooks_dialog.py
flightpath/inspect/: inspector.py
flightpath/util/: csvpath_loader.py  csvpath_utility.py  data_const.py  debug_utility.py  deploy_utility.py  editable.py  examples_marshal.py  feedback_utility.py  file_collector.py  file_utility.py  gate_guard.py  generator_utility.py  help_finder.py  highlighters.py  html_generator.py  icon_packager.py  json_utility.py  jsonl_line_spooler.py  key_utility.py  listener_utility.py  log_utility.py  message_utility.py  os_utility.py  printer.py  ref_creator_file.py  ref_creator_paths.py  run_info.py  server_utility.py  span_utility.py  state.py  string_utility.py  style_utils.py  syntax_highlighter.py  tabs_utility.py  tdata_utility.py  test_data_utility.py
flightpath/widgets/: clickable_label.py  combo.py  csvpath_text_edit.py  custom_tree_view.py  icon_packager.py  md_text_edit.py  plus_help.py  raw_text_edit.py  simple_table_model.py  tab_overlay.py  table_model.py  tabs_closing.py  tabs_closing_holder.py  tabs_nonscrolling_tab_bar.py  toolbar_config.py
flightpath/workers/: ai_generate_csvpath_worker.py  ai_worker.py  csvpath_file_worker.py  data_worker_signals.py  dispatcher.py  general_data_worker.py  json_data_worker.py  md_worker.py  one_off_run.py  precache_worker.py  precache_worker_signals.py  run_worker.py  run_worker_signals.py  test_run.py
packaging/: FlightPath Data-no-codesign.spec  FlightPath-Data-windows.spec  calculate_metadata.sh  codesign_app_for_dmg.sh  codesign_app_for_store.sh  create_release_candidate_app_store.sh  create_release_candidate_windows.bat  create_windows_release.bat  create_windows_release.ps1  create_windows_release_test.bat  dmg.sh  pkg.sh  transport.sh
packaging/6745823097/: metadata.xml
packaging/assets/: AppxManifest.arm64.xml  AppxManifest.xml  FlightPathCert.pfx  entitlements.plist
packaging/config/: config.ini
tests/: test_api_versions.py  test_backends.py  test_config_form.py  test_env_file.py  test_examples.py  test_file_util.py  test_insert_metadata.py  test_inspector.py  test_json_utility.py  test_server_api_v1.py  test_span_util.__  test_string_util.py  test_syntax.__  test_syntax.py  test_templates.py  test_test_data_utility.py
tests/console/: test_activation_listener.py  test_api_versions.py  test_backends.py  test_csvpath_loader.py  test_csvpath_utility.py  test_env_file.py  test_examples.py  test_file_util.py  test_insert_metadata.py  test_inspector.py  test_os_utility.py  test_server_api.py  test_server_api_v1.py  (+4 more)
(+362 files in other folders)
