[tool.poetry]
name = "flightpath"
version = "0.1.26"
description = ""
authors = ["Atesta Analytics <support@atestaanalytics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.14"
pyside6 = ">=6.8.3"
pygments = "^2.19.1"
darkdetect = "^0.8.0"
csvpath = "^0.0.586"
#csvpath = { path = "../csvpath/builds/csvpath-0.0.579.tar.gz" }
#
# always use the local flightpath_server because we bundle it, not push it to PyPi
#
#flightpath_server = "^0.1.17"
flightpath_server = { path = "./assets/flightpath_server-0.1.22.tar.gz" }
#
# having troubles (suddenly?!) getting sftp to work in smart-open. this
# didn't help. all dependencies are already present, as you'd think since
# it was working.
#
#smart-open = {extras = ["all"], version = "^7.1.0"}
httpx = "^0.28.1"
tzdata = "^2025.2"

[tool.poetry.scripts]
flightpath = "flightpath.main:run"

[tool.poetry.group.dev.dependencies]
pytest-qt = "^4.4.0"
black = "^25.1.0"
mypy = "^1.15.0"
pyinstaller = "^6.13.0"
pillow = "^11.2.1"
pylint = "^3.3.6"
pytest = "^8.3.5"
#csvpath = { path = "../csvpath/builds/csvpath-0.0.539.tar.gz" }
#flightpath_server = { path = "../flightpath_server/dist/flightpath_server-0.1.0.tar.gz" }

[[tool.poetry.source]]
name = "csvpath"
url = "file:///Users/davidkershaw/dev/csvpath/dist"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

