[tool.poetry]
name = "flightpath"
version = "0.1.30"
description = ""
authors = ["Atesta Analytics <support@atestaanalytics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
pyside6 = "6.11.0"
pygments = "2.19.2"
darkdetect = "0.8.0"
httpx = "0.28.1"
tzdata = "2025.3"
jsonpickle = "4.1.1"
#
#
#
csvpath = "0.0.606"
#csvpath = { path = "../csvpath/builds/csvpath-0.0.604.tar.gz" }
flightpath_server = { path = "./assets/flightpath_server-0.1.43.tar.gz" }
flightpath_generator = { path = "./assets/flightpath_generator-0.1.47.tar.gz"}

#
#
#
#
# having troubles (suddenly?!) getting sftp to work in smart-open. this
# didn't help. all dependencies are already present, as you'd think since
# it was working.
#
#smart-open = {extras = ["all"], version = "^7.1.0"}

[tool.poetry.scripts]
flightpath = "flightpath.main:run"

[tool.poetry.group.dev.dependencies]
pytest-qt = "4.5.0"
mypy = "1.19.1"
pyinstaller = "6.19.0"
pillow = "11.3.0"
pylint = "3.3.9"
pytest = "8.4.2"
pre-commit = "^4.5.1"
ruff = "^0.15.8"

[[tool.poetry.source]]
name = "csvpath"
url = "file:///Users/davidkershaw/dev/csvpath/dist"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

